# junior-veecle

./: .env.example  Cargo.toml
.github/workflows/: deploy.yml  runner-keepalive.yml  test.yml
prompts/: system.md
scripts/: deploy.sh  mic-volume-server.py  setup-pi.sh
src/: audio_device.rs  lib.rs  llm_client.rs  main.rs  types.rs
src/actors/: audio_capture.rs  audio_llm.rs  command_executor.rs  llm.rs  mod.rs  stt.rs
src/osal/: gpio.rs  mic.rs  mod.rs  speaker.rs
src/types/: audio.rs  capture.rs  command.rs  mod.rs  text.rs
tests/: llm_actor.rs
