[package]
name = "junior-veecle"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "junior-whisper"
path = "src/bin/junior-whisper.rs"

[[bin]]
name = "junior-audio"
path = "src/bin/junior-audio.rs"

[lib]
name = "junior_veecle"
path = "src/lib.rs"

[dependencies]
veecle-os = { version = "0.1.0", default-features = false, features = [
    "osal-std",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
] }
base64 = "0.22"
cpal = "0.15"
hound = "3"
tokio = { version = "1", features = ["sync", "process", "time", "io-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.21"
