[package]
name = "junior-veecle"
version = "0.1.0"
edition = "2024"
default-run = "junior-audio"

[[bin]]
name = "junior-whisper"
path = "src/bin/junior-whisper.rs"

[[bin]]
name = "junior-audio"
path = "src/bin/junior-audio.rs"

[lib]
name = "junior_veecle"
path = "src/lib.rs"

[dependencies]
veecle-os = { version = "0.1.0", default-features = false, features = [
    "osal-std",
    "telemetry-enable",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
] }
base64 = "0.22"
cpal = "0.15"
hound = "3"
tokio = { version = "1", features = ["sync", "process", "time", "io-util"] }
dotenvy = "0.15"

[dev-dependencies]
veecle-os-test = "0.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.21"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.5"
